--- a/style.css
+++ b/style.css
@@ -1,321 +1,403 @@
 :root {
-    --color-1: #222222;
-    --color-2: #f3f3f3;
-  } 
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
-    font-family: 'Roboto';
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-image: url(./img/fondo.jpg);
-    background-repeat: no-repeat;
-    height: 300vh;
-    background-attachment: fixed; 
-    }
-  
-  header {
-    background-color: var(--color-1);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-  }
-  
-  .logo-funko {
-    width: 130px;
-  }
-  
-  .logo-section {
-    font-family: Nabla;
-    font-size: 21px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  
-  .logo-funko2 {
-    width: 80px;
-  }
-  
-  p {
-    position: relative;
-    right: 12px;
-  }
-  
-  .nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    gap: 3rem;
-    list-style-type: none;
-    padding: 2rem;
-    color: #f3f3f3 !important;
-  }
+  --color-1: #222222;
+  --color-2: #f3f3f3;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  font-family: 'Roboto';
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url(./img/fondo.jpg);
+  background-repeat: no-repeat;
+  height: 300vh;
+  background-attachment: fixed;
+}
+
+header {
+  background-color: var(--color-1);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.logo-funko {
+  width: 130px;
+}
+
+.logo-section {
+  font-family: Nabla;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.logo-funko2 {
+  width: 80px;
+}
+
+p {
+  position: relative;
+  right: 12px;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: flex-end;
+  gap: 3rem;
+  list-style-type: none;
+  padding: 2rem;
+  color: #f3f3f3 !important;
+}
 
 nav {
-    background-color: none;
-    padding: 10px;
-    margin-top: 20px;
+  background-color: none;
+  padding: 10px;
+  margin-top: 20px;
 }
 
 .promo {
-    text-align: center; 
-    margin-top: 50px; 
-    font-family: 'Nabla';
+  text-align: center;
+  margin-top: 50px;
+  font-family: 'Nabla';
 }
+
 .container {
-    text-align: center; 
-    margin-top: 50px;
-    font-family: 'Nabla';
+  text-align: center;
+  margin-top: 50px;
+  font-family: 'Nabla';
 }
 
 #firstSectionFooter {
-    align-items: center;
-    background-color: #222222;
-    display: flex;
-    flex-direction: row-reverse;
-    padding: 2rem;
-    height: 13.5rem;
-    justify-content: space-between;
-    margin-top: 7rem;
-  }
-  
-  #redesSociales > h3 {
-    color: #f3f3f3;
-    margin-right: 2rem;
-    font-size: 25px;
-  }
-  
-  .bi-twitter::before {
-    color: #14aed0;
-    font-size: 2rem;
-  }
-  
-  .bi-facebook::before {
-    color: #1476d0;
-    font-size: 2rem;
-  }
-  
-  .bi-instagram::before {
-    color: #ce0cff;
-    font-size: 2rem;
-  }
-  
-  #iconos {
-    display: flex;
-    justify-content: space-between;
-    margin-right: 2rem;
-  }
-  
-  #secondSectionFooter {
-    background-color: #c4c4c4;
-    height: 1.56rem;
-  }
-  
-  #secondSectionFooter > h6 {
-    padding-top: 3px;
-    text-align: center;
-  }
-  
-  iframe {
-    width: 250px;
-    height: 110px;
-    border-radius: 30px;
-  }
-  
-  .ubi-section p {
-    color: var(--color-2);
-    font-size: 18px;
-  }
-  
-  .ubi-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-  }
-  
-  .ubi-section i {
-    color: var(--color-2);
-  }
-  
-  #contact-section {
-    width: 300px;
-    color: var(--color-2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  #contact-section h6 {
-    font-size: 20px;
-    margin-right: 2rem;
-  }
+  align-items: center;
+  background-color: #222222;
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 2rem;
+  height: 13.5rem;
+  justify-content: space-between;
+  margin-top: 7rem;
+}
+
+#redesSociales>h3 {
+  color: #f3f3f3;
+  margin-right: 2rem;
+  font-size: 25px;
+}
+
+.bi-twitter::before {
+  color: #14aed0;
+  font-size: 2rem;
+}
+
+.bi-facebook::before {
+  color: #1476d0;
+  font-size: 2rem;
+}
+
+.bi-instagram::before {
+  color: #ce0cff;
+  font-size: 2rem;
+}
+
+#iconos {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 2rem;
+}
+
+#secondSectionFooter {
+  background-color: #c4c4c4;
+  height: 1.56rem;
+}
+
+#secondSectionFooter>h6 {
+  padding-top: 3px;
+  text-align: center;
+}
+
+iframe {
+  width: 250px;
+  height: 110px;
+  border-radius: 30px;
+}
+
+.ubi-section p {
+  color: var(--color-2);
+  font-size: 18px;
+}
+
+.ubi-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.ubi-section i {
+  color: var(--color-2);
+}
+
+#contact-section {
+  width: 300px;
+  color: var(--color-2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contact-section h6 {
+  font-size: 20px;
+  margin-right: 2rem;
+}
 
 #Products {
-    display: grid;
-    margin: 50px;
-    margin-top: 0;
-    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
-    grid-template-rows: 400px;
-    gap:5px;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    place-content: center;
+  display: grid;
+  margin: 50px;
+  margin-top: 0;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-rows: 400px;
+  gap: 5px;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  place-content: center;
 }
 
 .product-content {
-    width: 100%;
-    max-width: 200px;
-    margin-bottom: 0px;
-    border-radius: 6px;
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  width: 100%;
+  max-width: 200px;
+  margin-bottom: 0px;
+  border-radius: 6px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
+
 .product-content:hover {
-    box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.6);
-    transform: translateY(-5%);
+  box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.6);
+  transform: translateY(-5%);
 }
 
 .product-content img {
-    width: 100%;
-    height: auto; 
+  width: 100%;
+  height: auto;
 }
+
 .product-txt {
-    color: var(--color-2);
-    font-size: 14px;
-    font-style: italic;
-    text-align: center;
+  color: var(--color-2);
+  font-size: 14px;
+  font-style: italic;
+  text-align: center;
 }
 
 .submenu {
-    margin-right: 5px;
-    display: flex;
-    justify-content: flex-end;
-    
-}
-.submenu #carrito {
-    display: none;
-}
-.submenu:hover #carrito {
-    display: block;
-    position: absolute;
-    right: 0;
-    backdrop-filter: blur(10px);
-    top: 100%;
-    z-index: 1;
-    padding: 20px;
-    min-width: 400px;
-}
-table {
-    width: 100%;
-}
-th, td {
-    color: var(--color-2);
-}
-.btn-1 {
-    display: inline-block;
-    padding: 5px;
-    font-size: 14px;
-    color: var(--color-2);
-    border: 1px solid var(--color-1);
-    border-radius: 25px;
-    margin-top: 15px;
-    text-decoration: none;
+  margin-right: 5px;
+  position: relative;
 
 }
-.btn-3{
-    display: inline-block;
-    padding: 10px 25px;
-    font-size: 14px;
-    color: var(--color-2);
-    border: 1px solid var(--color-1);
-    border-radius: 25px;
-    margin-top: 15px;
-    text-decoration: none;
+
+#carrito {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: calc(100% + 5px);
+  z-index: 1;
+  padding: 20px;
+  min-width: 400px;
+  background-color: none;
+  border: 1px solid var(--color-1);
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
 }
+
+.submenu:hover #carrito {
+  display: block;
+}
+
+table {
+  width: 100%;
+}
+
+th,
+td {
+  color: var(--color-2);
+}
+
+.btn-1 {
+  display: inline-block;
+  padding: 5px;
+  font-size: 14px;
+  color: var(--color-2);
+  border: 1px solid var(--color-1);
+  border-radius: 25px;
+  margin-top: 15px;
+  text-decoration: none;
+}
+
+.btn-1:hover {
+  background-color: dimgray;
+  color: var(--color-2);
+}
+.btn-3 {
+  display: inline-block;
+  padding: 10px 25px;
+  font-size: 14px;
+  color: var(--color-2);
+  border: 1px solid var(--color-1);
+  border-radius: 25px;
+  margin-top: 15px;
+  text-decoration: none;
+}
+
 .btn-3:hover {
-    background-color: dimgray;
+  background-color: dimgray;
+  color: var(--color-2);
 }
 
 .footer {
-    background-color: var(--color-1);
+  background-color: var(--color-1);
+}
+
+.promo {
+  text-align: center;
+  padding: 50px;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
 }
 
 .slide {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-   
-  }
-  
- .slide img {
-    max-width: 100%;
-    height: auto;
+  min-width: 100%;
+  box-sizing: border-box;
+  position: relative;
+}
 
-  }
-  
+.slide img {
+  border-radius: 10px;
+}
+
+.slide-content {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: -13px;
+  right: 200px;
+  color: white;
+  padding: 0;
+  align-items: center;
+}
+
+.slide-content h2 {
+  font-size: 25px;
+}
+
+.prices {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.price-1 {
+  font-size: 15px;
+  color: dimgray;
+  text-decoration-line: line-through;
+  margin-bottom: 5px;
+}
+
+.price-2 {
+  font-size: 20px;
+  color: var(--color-2);
+}
+
+.btn-2 {
+  display: inline-block;
+  padding: 10px 25px;
+  font-size: 14px;
+  color: var(--color-2);
+  border: 1px solid var(--color-1);
+  border-radius: 25px;
+  margin-top: 15px;
+  text-decoration: none;
+  align-items: center;
+}
+
+.btn-2:hover {
+  background-color: dimgray;
+  color: var(--color-2);
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+.navigation {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.navigation label {
+  cursor: pointer;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  background: #ddd;
+  border-radius: 50%;
+}
+
+input[type="radio"]:checked~.slides {
+  transform: translateX(calc(-100% * var(--index)));
+}
+
+#slide1:checked~.slides {
+  --index: 0;
+}
+
+#slide2:checked~.slides {
+  --index: 1;
+}
+
+#slide3:checked~.slides {
+  --index: 2;
+}
+
+#slide1:checked~.navigation label:nth-child(1),
+#slide2:checked~.navigation label:nth-child(2),
+#slide3:checked~.navigation label:nth-child(3) {
+  background: #333;
+}
+
+@media (min-width: 768px) {
   .slide-content {
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    font-family: 'roboto';
-    color: var(--color-2);
+    max-width: 40%;
   }
-  
-  .btn-comprar {    display: inline-block;
-    padding: 10px 25px;
-    font-size: 14px;
-    color: var(--color-2);
-    border: 1px solid var(--color-1);
-    border-radius: 25px;
-    margin-top: 15px;
-    text-decoration: none;
+}
+
+@media (min-width: 1200px) {
+  .slide-content {
+    max-width: 33.33%;
   }
-  .btn-comprar:hover {
-    background-color: dimgray;
-  }
-  .navigation {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50);
-  }
-  
-  .navigation label {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: var(--color-1);
-    cursor: pointer;
-    margin: 0 5px;
-  }
-  
-  input[type="radio"] {
-    display: none;
-  }
-  
-  input[type="radio"]:checked + .slides .slide {
-    opacity: 0;
-  }
-  
-  input[type="radio"]:checked + .slides .slide:nth-child(1),
-  input[type="radio"]:checked + .navigation label:nth-child(1) {
-    opacity: 1;
-  }
+}
